--- a/sixth.css
+++ b/sixth.css
@@ -2,11 +2,37 @@ html {
     background-color: aquamarine;
 }
 
-#navbar {
+body {
+    margin: 3rem;
+}
+
+.navbar {
+    background-color: pink;
+}
+
+ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    padding-inline-start: 0px;
+    padding-inline-end: 0px;
+    background-color: grey;
+    width: 100%;
+    display: block;
+    /* margin-block-start: 1em;
+    margin-block-end: 1em; */
+    overflow: hidden;
 }
+
+/* #navbar {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    padding-inline-start: 40px;
+    padding-inline-end: 40px;
+    background-color: grey;
+    width: 100%;
+} */
 
 li {
     float: left;
@@ -27,3 +53,4 @@ a {
     display: inline-block;
     padding: 12px 36px;
 }
+
